Added rename ability
